Fixed Issue with Horizontal Scroll
Added more attributes to the body tag..
Max Width is now a 100% and the horizontal scroll is hidden

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,11 @@
   }
 }
 
+#body{
+   max-width: 100%;
+   overflow-x: hidden;
+}
+
 .loader {
   border: 16px solid #FFF;
   border-radius: 50%;
